# shed-pi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conftest.py  db.sqlite3.pre_importbkup  insert_data.py  manage.py  pyproject.toml  requirements.txt  temp_logger.py
.github/workflows/: lint.yml  test.yml
database/: constants.py  create_db.py  database.db  get_db_data.py
historic_data_import/: README.md  apps.py
historic_data_import/management/commands/: data_import.py
shed_pi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shedpi_components/: am2302.py  temperature_probe.py
shedpi_components/AM2302/: __init__.py
shedpi_components/AM2302/tests/unit/: test_probe.py
shedpi_hub_dashboard/: admin.py  apps.py  field_engine.py  models.py  pagination.py  serlializers.py  urls.py  views.py
shedpi_hub_dashboard/forms/: fields.py
shedpi_hub_dashboard/migrations/: 0001_initial.py  0002_alter_devicemodulereading_created_at.py
shedpi_hub_dashboard/static/shedpi_hub_dashboard/: dummy_data.json
shedpi_hub_dashboard/static/shedpi_hub_dashboard/js/: chart_widget.js  index.js  reading.js
shedpi_hub_dashboard/static/shedpi_hub_dashboard/js/modules/: chart.js  table.js  utils.js
shedpi_hub_dashboard/templates/: base_generic.html  index.html  reading.html
shedpi_hub_dashboard/templates/shedpi_hub_dashboard/: index.html
shedpi_hub_dashboard/tests/: test_endpoints.py  test_engine.py  test_json_schema.py
shedpi_hub_dashboard/tests/integration/: test_module_reading_submission.py
shedpi_hub_dashboard/tests/unit/: test_endpoints.py  test_json_schema.py
shedpi_hub_dashboard/tests/utils/: factories.py
shedpi_hub_example_project/: README.md  asgi.py  settings.py  urls.py  wsgi.py
shedpi_module_utils/: pyproject.toml
shedpi_module_utils/shedpi_components/: ds18b20.py
shedpi_module_utils/shedpi_module_utils/: base_protocol.py
shedpi_module_utils/tests/: utils.py
shedpi_module_utils/tests/integration/: test_module_data_submission.py
standalone_modules/_template_module/: README.md  device_protocol.py
standalone_modules/rpi/: README.md  device.py  device_protocol.py
standalone_modules/rpi/tests/unit/: test_device_protocol.py
standalone_modules/shed_pi_example_device_installation/: device_protocol.py
standalone_modules/shed_pi_example_device_installation/tests/unit/: test_device_protocol.py
standalone_modules/shed_pi_module_utils/: base_protocol.py  data_submission.py  utils.py
standalone_modules/shed_pi_module_utils/tests/: utils.py
standalone_modules/shed_pi_module_utils/tests/integration/: test_module_data_submission.py
standalone_modules/shedpi_module_am2320/: README.md  pyproject.toml
standalone_modules/shedpi_module_am2320/shedpi_module_am2320/: device_protocol.py
standalone_modules/shedpi_module_am2320/tests/unit/: test_probe.py
standalone_modules/temperature_module/: README.md  device_protocol.py  temp_logger.py  temp_readings_import.py  temperature_probe.py  test_temp_module.py
standalone_modules/temperature_module/tests/integration/: test_temp_module.py
standalone_modules/temperature_module/tests/unit/: test_temp_module.py
website/: index.html
website/js/: index.js
